# src/main/java/com/example/usermanageapirest/application/controller/response/UniversitiesListResponse.java
@@ -1,0 +1,4 @@
+package com.example.usermanageapirest.application.controller.response;
+
+public class UniversitiesListResponse {
+}
