# src/main/java/com/example/usermanageapirest/application/controller/response/UniversityInfoResponse.java
@@ -1,0 +1,4 @@
+package com.example.usermanageapirest.application.controller.response;
+
+public class UniversityInfoResponse {
+}
