# src/main/java/com/example/usermanageapirest/application/controller/response/UserListResponse.java
@@ -1,0 +1,4 @@
+package com.example.usermanageapirest.application.controller.response;
+
+public class UserListResponse {
+}
