# src/main/java/com/example/usermanageapirest/domain/services/UserServices.java
@@ -1,5 +1,8 @@
 package com.example.usermanageapirest.domain.services;
 
+import com.example.usermanageapirest.application.controller.response.UniversitiesListResponse;
+import com.example.usermanageapirest.application.controller.response.UniversityInfoResponse;
+import com.example.usermanageapirest.application.controller.response.UserInfoResponse;
 import com.example.usermanageapirest.domain.entity.User;
 import com.example.usermanageapirest.domain.exception.ResourceCreateException;
 import com.example.usermanageapirest.domain.exception.ResourceUpdateException;
@@ -9,6 +12,7 @@ import com.example.usermanageapirest.domain.services.input.UserCreateInput;
 import com.example.usermanageapirest.domain.services.input.UserInfoUpdateInput;
 import com.example.usermanageapirest.domain.services.validator.UserInputValidator;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -34,6 +38,19 @@ public class UserServices {
 	public User update(UserInfoUpdateInput input) throws ResourceUpdateException, ValidationException {
 		this.validator.validateUserInfoUpdateInput(input);
 		return this.userRepository.update(input);
+		userValidator.validateLanguage(input);
+		return this.userRepository.create(input);
 	}
 
+	public User get(Integer userId) {
+		return this.userRepository.get(userId).get();
+	}
+
+	public ResponseEntity<UniversitiesListResponse> listUniversities(User userId) {
+		return null;
+	}
+
+	public ResponseEntity<UniversityInfoResponse> getUniversity(User userId, Integer universityId) {
+		return null;
+	}
 }
