# src/main/java/com/example/usermanageapirest/exception/BadRequest.java
@@ -1,0 +1,11 @@
+package com.example.usermanageapirest.exception;
+
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class BadRequest {
+
+	List<String> errors;
+}
